kubernetes/apps/default/misc-ingress/app/ingress-internal-minio.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
spec:
  ingressClassName: internal
  rules:
    - host: &host "minio.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9769
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio
subsets:
  - addresses:
      - ip: "${SECRET_UNRAID_IP}"
    ports:
      - name: http
        port: 9769
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  ports:
    - name: http
      port: 9769
  type: ClusterIP
